--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ Service.USERNAME_UPDATION_FAILED = User name updation failed!
 Service.USERPASSWORD_UPDATION_FAILED = User password updation failed!
 Service.USER_DELETION_FAILED = User deletion failed!
 
-API.USER_SIGNUP_SUCCESS = User signed up successfully with Id : 
-API.USER_LOGIN_SUCCESS = User logged in successfully with Id : 
-API.USER_NAME_UPDATED = User name updated successfully with id : 
-API.USER_PASSWORD_UPDATED = User password updated successfully with id : 
-API.ACCOUNT_DELETED = User account deleted successfully with id : 
+#API.USER_SIGNUP_SUCCESS = User signed up successfully with Id : 
+#API.USER_LOGIN_SUCCESS = User logged in successfully with Id : 
+#API.USER_NAME_UPDATED = User name updated successfully with id : 
+#API.USER_PASSWORD_UPDATED = User password updated successfully with id : 
+#API.ACCOUNT_DELETED = User account deleted successfully with id : 
 
 # MYSQL settings
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_project
